[tool.poetry]
name = "octave"
version = "0.1.0"
description = "DevOps Specialist technical skills assignment"
authors = ["Karl Dagenais"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
